--- a/app/templates/-about.hbs
+++ b/app/templates/-about.hbs
@@ -1,5 +1,7 @@
 <div class="container container-about text-center">
-  <h2 class="title">Jessica Forehand</h2>
-  <p>Photographer, Videographer, Creative for Hire</p>
-  <a class="btn btn-primary">Email Me</a>
+  <div class="container-inner about-inner clearfix">
+    <h2 class="title">Jessica Forehand</h2>
+    <p>Photographer, Videographer, Creative for Hire</p>
+    <a class="btn btn-primary">Email Me</a>
+  </div>
 </div>
