--- a/app/templates/-header.hbs
+++ b/app/templates/-header.hbs
@@ -1,13 +1,18 @@
 <div class="container container-header">
-  <div class="title pull-left">Jessica Forehand</div>
-  <div class="nav pull-right">
-    <ul class="list-inline">
-      <li><a href="#">Photography</a></li>
-      <li><a href="#">Video</a></li>
-      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-      <li><a href="#"><i class="fa fa-envelope-o"></i></a></li>
-    </ul>
+  <div class="container-inner header-inner clearfix">
+    <div class="title pull-left">Jessica Forehand</div>
+    <div class="nav pull-right">
+      <ul class="list-inline list-unstlyed hidden-xs">
+        <li><a href="#" class="no-sep">Photography</a></li>
+        <li><a href="#">Video</a></li>
+        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="#" class="no-sep"><i class="fa fa-envelope-o"></i></a></li>
+      </ul>
+      <ul class="list-inline list-unstlyed visible-xs">
+        <li><a href="#" class="no-sep">Menu <i class="fa fa-bars"></i></a></li>
+      </ul>
+    </div>
   </div>
 </div>
