--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -4,10 +4,11 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row row-projects">
   {{#each}}
-    <div class="col-sm-4 col-xs-12">
-      <img {{bind-attr src=thumbnail alt=name}} />
+
+    <div class="col-sm-4 col-xs-12 project">
+        <img {{bind-attr src=thumbnail alt=name}} />
     </div>
   {{/each}}
 </div>
