--- a/app/templates/-header.hbs
+++ b/app/templates/-header.hbs
@@ -1,10 +1,11 @@
 <div class="container container-header">
   <div class="container-inner header-inner clearfix">
-    <div class="title pull-left">Jessica Forehand</div>
+    <div class="title pull-left">{{#link-to 'projects'}}Jessica Forehand{{/link-to}}</div>
     <div class="nav pull-right">
       <ul class="list-inline list-unstlyed hidden-xs">
-        <li><a href="#" class="no-sep">Photography</a></li>
-        <li><a href="#">Video</a></li>
+        <li><a href="#" class="no-sep">Portrait</a></li>
+        <li><a href="#" class="no-sep">Event</a></li>
+        <li><a href="#">Art</a></li>
         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
