Get filters working. This closes #3

--- a/app/templates/-header.hbs
+++ b/app/templates/-header.hbs
@@ -3,9 +3,9 @@
     <div class="title pull-left">{{#link-to 'projects'}}Jessica Forehand{{/link-to}}</div>
     <div class="nav pull-right">
       <ul class="list-inline list-unstlyed hidden-xs">
-        <li><a href="#" class="no-sep">Portrait</a></li>
-        <li><a href="#" class="no-sep">Event</a></li>
-        <li><a href="#">Art</a></li>
+        <li>{{#link-to 'projects.portraits' class='no-sep'}}Portrait{{/link-to}}</li>
+        <li>{{#link-to 'projects.events' class='no-sep'}}Event{{/link-to}}</li>
+        <li>{{#link-to 'projects.art'}}Art{{/link-to}}</li>
         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
